--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,12 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="theme-color" content="#000000"/>
-    <link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
           integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
           crossorigin="anonymous" referrerpolicy="no-referrer"/>
 
-    <link rel="stylesheet" type="text/css" href="/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/css/style.css" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
     <title>مدیریت مخاطبین</title>
 </head>
@@ -18,6 +18,6 @@
 <noscript>You need to enable JavaScript to run this app.</noscript>
 <div id="root"></div>
 
-<script src="/js/bootstrap.min.js"></script>
+<script src="%PUBLIC_URL%/js/bootstrap.min.js"></script>
 </body>
 </html>
